codex-rs/tui/src/snapshots/codex_tui__app__tests__clear_ui_after_long_transcript_fresh_header_only.snap
---
source: tui/src/app/tests.rs
expression: rendered
---
  >_ Codex v<VERSION>
  GPT Test high  /model to change
  /tmp/project
  Guarded access  /permissions to review
