codex-rs/tui/src/snapshots/codex_tui__app__tests__duplicate_named_resume_error.snap
---
source: tui/src/app/tests.rs
expression: rendered
---
Existing conversation

■ Multiple sessions match
│ 'duplicate-label' (including
│ <session UUID> and
│ <session UUID>); use a session UUID to disambiguate.
