codex-rs/tui/src/snapshots/codex_tui__app__tests__in_app_resume_session_cwd_without_metadata.snap
---
source: tui/src/app/tests.rs
expression: rendered
---
■ Failed to determine working directory for resume: failed to determine the working directory
│ recorded for the selected session
