codex-rs/tui/src/snapshots/codex_tui__app__tests__replayed_file_change_approval.snap
---
source: tui/src/app/tests.rs
expression: rendered
---
  ◇ Apply proposed changes?

  Description: Apply proposed file edits
  Destination: /tmp/project/visible-target.md

› 1. Apply changes (y)                       Applies only these proposed changes.
  2. Allow these paths for this session (a)  Allows changes to these paths for this session.
  3. Tell Codex what to do instead (esc)       Keeps these proposed changes from being applied.

  enter select · esc stop & reply
