codex-rs/tui/src/snapshots/codex_tui__app__tests__thread_read_model_after_switch.snap
---
source: tui/src/app/tests.rs
expression: model_line
---
  server-reported-model  /model to change
