codex-rs/tui/src/snapshots/codex_tui__app__tests__untracked_thread_notifications_agent_picker.snap
---
source: tui/src/app/tests.rs
expression: "render_bottom_popup(&app.chat_widget, 80)"
---
  Subagents
  Select an agent to watch. ⌥ + ← previous, ⌥ + → next.

› 1. • Main [default] ✓  00000000-0000-0000-0000-000000000123

  ↑/↓ choose · enter confirm · esc back
